# texas-county-dashboard

./: .gitignore  README.md  pyproject.toml
examples/analytics/: explore_census_profiles.ipynb  test_geoid.ipynb
examples/census_client/: county_profile.py  demographics_profile.py  economics_profile.py  education_profile.py  employment_profile.py  housing_profile.py
examples/census_helpers/: get_entire_table.py  search_by_keyword.py
examples/census_metadata/: browse_concepts.py  county_exploration.ipynb  get_df_of_census_variables.py
examples/geography/: plot_maps.ipynb  testing_county_shapefiles.ipynb  testing_index.ipynb
notebooks/: explore_census_profiles.ipynb
notebooks/data_exploration/: census_api_exploration.ipynb
notebooks/data_exploration/census_api_exploration/: census_api_exploration.ipynb  census_metadata_exploration.ipynb
src/texas_county_dashboard/: config.py
src/texas_county_dashboard/texas_county_dashboards/scripts/: clean_data.py  download_census.py
src/texas_county_dashboards/: cache.py  config.py
src/texas_county_dashboards/analytics/: county_analytics.py
src/texas_county_dashboards/constants/: census.py
src/texas_county_dashboards/scripts/: census_client.py  census_helpers.py  census_metadata.py  census_variables.py  clean_data.py  county_analytics.py  download_census.py
src/texas_county_dashboards/variables/: county.py  demographics.py  economics_profile.py  education_profile.py  employment_profile.py  housing.py
tests/: test_cache.py  test_census_client.py  test_county_analytics.py
(+7 files in other folders)
